--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,3 +460,38 @@ ul > :last-child {
     transform: translateY(0px);
   }
 }
+/* ------------pre loader --------------- */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+.loader {
+  width: 220px;
+  height: 220px;
+  background: transparent;
+  border: 4px solid var(--white);
+  border-bottom: 0;
+  border-top: 0;
+  animation: spin 1s linear infinite;
+  border-radius: 50%;
+}
+@keyframes spin {
+  50% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+.overflow_hidden {
+  overflow: hidden !important;
+}
